--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@mdx-js/react": "^1.6.21",
     "clsx": "^1.1.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "prism-react-renderer": "^1.2.0"
   },
   "devDependencies": {
     "@docusaurus/types": "^2.0.0-alpha.73",
