--- a/package.json
+++ b/package.json
@@ -19,19 +19,19 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-alpha.73",
-    "@docusaurus/preset-classic": "2.0.0-alpha.73",
+    "@docusaurus/core": "^2.0.0-beta.0",
+    "@docusaurus/preset-classic": "^2.0.0-beta.0",
     "@mdx-js/react": "^1.6.21",
     "clsx": "^1.1.1",
+    "prism-react-renderer": "^1.2.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "prism-react-renderer": "^1.2.0"
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@docusaurus/types": "^2.0.0-alpha.73",
     "@types/mdx-js__react": "^1.5.3",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3"
+    "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.5"
   },
   "browserslist": {
     "production": [
