--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@docusaurus/types": "^2.0.0-alpha.73",
+    "@docusaurus/types": "^2.0.0-beta.1",
     "@types/mdx-js__react": "^1.5.3",
     "@types/react": "^17.0.11",
-    "@types/react-dom": "^17.0.7"
+    "@types/react-dom": "^17.0.8"
   },
   "browserslist": {
     "production": [
