--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.0.0-beta.21",
-    "@docusaurus/preset-classic": "^2.0.0-beta.21",
+    "@docusaurus/core": "^2.0.0",
+    "@docusaurus/preset-classic": "^2.0.0",
     "@mdx-js/react": "^1.6.21",
-    "clsx": "^1.1.1",
-    "prism-react-renderer": "^1.2.1",
+    "clsx": "^1.2.1",
+    "prism-react-renderer": "^1.3.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@docusaurus/types": "^2.0.0-beta.21",
+    "@docusaurus/types": "^2.0.0",
     "@types/mdx-js__react": "^1.5.5",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11"
